<resources>
    <string name="app_name">TaskList</string>
    <string name="main_tv_categorias">Aún no hay ninguna categoría</string>
    <string name="main_btn_cerrar_sesion">Cerrar sesión</string>
    <string name="main_btn_add_categoria">Agregar categoría</string>
    <string name="main_btn_borrar_categoria">Borrar categoría</string>
    <string name="main_tv_tareas_hechas">Tareas ya terminadas</string>
    <string name="main_btn_agregar">Agregar tarea</string>
    <string name="main_tv_tareas_por_hacer">Tareas no terminadas aún</string>
    <string name="add_tarea_cb_prioridad">Prioridad alta</string>
    <string name="add_tarea_rb_pagina">Añadir página de interés</string>
    <string name="add_tarea_rb_mapa">Añadir mapa</string>
    <string name="add_tarea_btn_enviar">Añadir tarea</string>
    <string name="add_tarea_tv_tiempo">Tiempo estimado: %d mins</string>
    <string name="add_tarea_tv_nombre">Nombre:</string>
    <string name="add_tarea_et_nombre">Nombre de la tarea....</string>
    <string name="add_tarea_tv_descripcion">Descripción:</string>
    <string name="add_tarea_et_descripcion">Introduce aquí la descripción de la tarea</string>
    <string name="add_tarea_tv_titulo">Añadir tarea</string>
    <string name="add_tarea_tv_titulo_editar">Editar tarea</string>
    <string name="add_tarea_btn_editar">Editar tarea</string>
    <string name="add_tarea_tv_extras_pagina">Página donde realizar la tarea: %s</string>
    <string name="add_tarea_tv_extras_mapa">Localización donde realizar la tarea: %s</string>
    <string name="add_tarea_tv_extras">Aún no se han agregado extras</string>
    <string name="login_activity_tv_email">Email: </string>
    <string name="login_activity_tv_pass">Contraseña: </string>
    <string name="login_activity_btn_registrar">Registrarme </string>
    <string name="login_activity_btn_login">Iniciar sesión </string>
    <string name="add_categoria_tv_nombre">Nombre categoría:</string>
    <string name="add_categoria_tv_busqueda">Buscar icono para categoría:</string>
    <string name="add_categoria_et_nombre">Nombre del icono....</string>
    <string name="add_categoria_searchview">Icono a buscar....</string>
    <string name="add_categoria_btn_agregar">Agregar categoría</string>
    <string name="add_categoria_btn_cancelar">Cancelar</string>
</resources>