<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".TareasActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="12dp">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fg_categoria"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_cerrar_sesion" />

        <View
            android:id="@+id/separator2"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_add_categoria"
            app:layout_constraintVertical_bias="0.007" />

        <View
            android:id="@+id/separator3"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toTopOf="@+id/fg_categoria"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_tareas_por_hacer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:text="@string/main_tv_tareas_por_hacer"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/iv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/separator2" />

        <androidx.cardview.widget.CardView
            android:id="@+id/iv"
            android:layout_width="0dp"
            android:layout_height="500dp"
            android:layout_marginEnd="20dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintBottom_toTopOf="@+id/separator"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/tv_tareas_por_hacer"
            app:layout_constraintTop_toBottomOf="@+id/tv_tareas_por_hacer">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_tareas_por_hacer"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_tareas_hechas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/main_tv_tareas_hechas"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/separator" />

        <View
            android:id="@+id/separator"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.6" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="0dp"
            android:layout_height="500dp"
            android:layout_marginEnd="20dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/tv_tareas_hechas"
            app:layout_constraintTop_toBottomOf="@+id/tv_tareas_hechas">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_tareas_hechas"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </androidx.cardview.widget.CardView>


        <Button
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginStart="12dp"
            android:backgroundTint="#C5CAE9"
            android:elevation="4dp"
            android:text="Agregar tarea"
            app:circularflow_radiusInDP="64dp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_tareas_por_hacer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_tareas_por_hacer" />

        <Button
            android:id="@+id/btn_cerrar_sesion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#fcb7af"
            android:text="@string/main_btn_cerrar_sesion"
            app:layout_constraintEnd_toEndOf="@+id/separator3"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_add_categoria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="#ffca99"
            android:text="@string/main_btn_add_categoria"
            app:layout_constraintStart_toStartOf="@+id/fg_categoria"
            app:layout_constraintTop_toBottomOf="@+id/fg_categoria" />

        <Button
            android:id="@+id/btn_borrar_categoria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="#FEC8D8"
            android:text="@string/main_btn_borrar_categoria"
            app:layout_constraintEnd_toEndOf="@+id/fg_categoria"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/btn_add_categoria"
            app:layout_constraintTop_toBottomOf="@+id/fg_categoria" />

        <TextView
            android:id="@+id/tv_email_iniciado_sesion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/btn_cerrar_sesion"
            app:layout_constraintStart_toStartOf="@+id/separator3" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>